# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.684 2006/09/13 16:50:23 agaffney Exp $

  13 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  add _wait_for_device_node()
  src/GLIPortage.py:
  raise an exception in get_deps() if pkglist is empty

  11 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  break after installing 1 mta in install_mta()

  10 Sep 2006; Preston Cody <codeman@gentoo.org>
  src/GLIGenDialog.py:
  rewrote how the USE flags work so that they are written correctly in relation
  to the system's USE flags.
  added a while condition on setting a user password
  src/GLIArchitectureTemplate.py:
  adding a self._mounted_devices to keep track of mounted partitions.
  When cleaning up, only unmount these partitions.  Not yet tested.
  
  10 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  properly identify apple_bootstrap partitions

  9 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  pay attention to 'ignoredparts' when reading partition table

  3 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  force conversion of 'mb' to long

  2 Sep 2006; Preston Cody <codeman@gentoo.org>
  Lots of internationalization fixes.  Point to a translation path called
  languages in the dialog directory.  Generated and added .pot files.
  Added gettext to GLIIP for package descriptions.

  01 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  src/GLIInstallProfile.py:
  Added some more applications to the Extra Packages list.

  1 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/ppcArchitectureTemplate.py:
  this doesn't need to inherit from x86AT or create an infinite loop by calling
  its own __init__()
  src/GLIArchitectureTemplate.py,src/templates/x86ArchitectureTemplate.py: