@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.684 2006/09/13 16:50:23 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.685 2006/09/13 18:26:30 agaffney Exp $
 
   13 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
   add _wait_for_device_node()
   src/GLIPortage.py:
   raise an exception in get_deps() if pkglist is empty
+  -k option to install livecd-kernel to shut up wolf31o2 :P
 
   11 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
